[package]
name = "topot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
curlc = { path = "curlc" }
serde_json = "1.0.104"
ctrlc = "3.4.0"
rocket = {version = "0.5.0-rc.3", features = ["serde_json", "json"]}
serde = "1.0.189"